BB-237 extend-openapi-with-5xx-and-default
